# visio-mobile

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build-android.yml  build-ios.yml  ci.yml
android/app/: build.gradle.kts
android/app/src/androidTest/kotlin/io/visio/mobile/ui/: InCallSettingsSheetTest.kt  ParticipantTileTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/i18n/: de.json  en.json  es.json  fr.json  it.json  nl.json
android/app/src/main/kotlin/io/visio/mobile/: AudioCapture.kt  AudioPlayout.kt  CallForegroundService.kt  CameraCapture.kt  ContextDetector.kt  MainActivity.kt  VideoSurfaceView.kt  VisioManager.kt
android/app/src/main/kotlin/io/visio/mobile/auth/: OidcAuthManager.kt  OidcLoginActivity.kt
android/app/src/main/kotlin/io/visio/mobile/ui/: CallScreen.kt  ChatScreen.kt  HomeScreen.kt  InCallSettingsSheet.kt  ParticipantListSheet.kt  SettingsScreen.kt
android/app/src/main/kotlin/uniffi/visio/: visio.kt
android/app/src/main/res/drawable/: ri_emotion_line.xml  ri_more_2_fill.xml  ri_notification_3_line.xml
android/fastlane/: Fastfile
crates/visio-core/: Cargo.toml
crates/visio-core/src/: access.rs  adaptive.rs  audio_capture_buffer.rs  audio_playout.rs  auth.rs  bandwidth.rs  controls.rs  errors.rs  events.rs  lib.rs  lobby.rs  participants.rs  room.rs  session.rs  settings.rs
crates/visio-core/tests/: integration_livekit.rs
crates/visio-desktop/: Cargo.toml  build.rs  tauri.conf.json
crates/visio-desktop/capabilities/: default.json
crates/visio-desktop/frontend/: package-lock.json  package.json
crates/visio-desktop/frontend/src/: App.css  App.tsx
crates/visio-desktop/icons/: icon.icns
crates/visio-desktop/src/: audio_cpal.rs  camera_linux.rs  camera_macos.rs  lib.rs  screen_capture.rs
crates/visio-ffi/: Cargo.toml
crates/visio-ffi/src/: lib.rs  visio.udl
crates/visio-ffi/src/blur/: convert.rs  gaussian.rs  mod.rs  process.rs
crates/visio-ffi/tests/: blur_integration.rs
crates/visio-video/src/: android.rs  desktop.rs  ios.rs  lib.rs
docs/plans/: 2026-03-07-background-blur-implementation.md  2026-03-07-oidc-authentication-implementation.md  2026-03-07-restricted-rooms-design.md  2026-03-07-waiting-room-design.md  2026-03-07-waiting-room-implementation.md  2026-03-08-recent-meetings-design.md  2026-03-09-screen-capture-design.md  2026-03-09-screen-sharing-design.md
i18n/: de.json  en.json  es.json  fr.json  it.json  nl.json
ios/VisioMobile/: CameraCapture.swift  Info.plist  VisioManager.swift  VisioMobileApp.swift
ios/VisioMobile.xcodeproj/: project.pbxproj
ios/VisioMobile/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/VisioMobile/Services/: ContextDetector.swift
ios/VisioMobile/Views/: CallView.swift  ChatView.swift  HomeView.swift  InCallSettingsSheet.swift  ParticipantListSheet.swift  SettingsView.swift
ios/VisioMobile/i18n/: Strings.swift
ios/fastlane/: Appfile  Fastfile
scripts/: build-android.sh  build-ios.sh  generate-bindings.sh
