[package]
name = "visio-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
visio-core = { path = "../visio-core" }
visio-ffi = { path = "../visio-ffi" }
visio-video = { path = "../visio-video" }
livekit = { workspace = true }
tauri = { version = "2", features = [] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "6"
cpal = "0.15"
tauri-plugin-deep-link = "2"
sys-locale = "0.3"
open = "5"

[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSObject", "NSString"] }
block2 = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
