[package]
name = "visio-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
visio-core = { path = "../visio-core" }
visio-video = { path = "../visio-video" }
uniffi = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-native"] }
ndarray = "0.17"
jpeg-decoder = "0.3"

# On Linux, use load-dynamic to avoid duplicate protobuf symbols with webrtc-sys. Use api-18 for that.
# download-binaries still needed for matching ort-sys headers.
[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "load-dynamic", "download-binaries", "api-18", "tls-native"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-sys = "0.6"
libwebrtc = "0.3.26"
livekit = { workspace = true, features = ["rustls-tls-webpki-roots"] }

[target.'cfg(target_os = "ios")'.dependencies]
livekit = { workspace = true, features = ["rustls-tls-webpki-roots"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
webrtc-sys-build = "0.3"

[features]
default = []
cli = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen"
required-features = ["cli"]
